Refactor: Transition from Rider to User model and remove Rider-related classes